<resources>
    <string name="app_name">Remind</string>
    <string name="action_settings">Impostazioni generali</string>
    <string name="sconosciuto">[UNKNOWN]</string>
    <string name="notification_return_to">Ritorda al magnetofono </string>
    <string name="invalid_song_service">Errore: file audio non trovato</string>
    <string name="playing_song_alert">Errore: impossibile cambiare o eliminare il brano mentre è in esecuzione</string>
    <string name="charging_song_alert">Impossibile caricare il nastro selezionato: uno o più file sono mancanti</string>
    <string name="search_hint">Cerca per firma</string>
    <string name="monitor_setup_unavailable">Carica un nastro prima di accedere al setup dell\'ascolto</string>
    <string name="refresh_alert">Nel processo di refresh è stata eliminata/modificata la canzone che era in riproduzione, ciò ha causato la rimozione
         dell\'opera dal magnetofono, prego ricaricare se ancora presente</string>
    <string name="cd">Descrizione del contentuo</string>
    <string name="choose_a_song">Seleziona un nastro</string>
    <string name="info_base">INFORMAZIONI GENERALI</string>
    <string name="general_info">INFORMAZIONI GENERALI</string>
    <string name="reproduction_settings">IMPOSTAZIONI DI RIPRODUZIONE DA MODIFICARE in AUDIO CONTENT</string>
    <string name="audio_info">INFORMAZIONI AUDIO</string>
    <string name="equalization_title">Equalizzazione</string>
    <string name="speed_title">velocità di riproduzione del nastro</string>
    <string name="number_of_tracks_title2">Numero di tracce (tipo di segnale)</string>
    <string name="info_on_tracks">INFORMAZIONI SULLE TRACCE da modificare in ORIGINAL DOCUMENT DESCRIPTION</string>
    <string name="video">Video</string>
    <string name="bitdepth">Bitdepth</string>
    <string name="video_not_available">Video non disponibile</string>
    <string name="description_button">Descrizione</string>
    <string name="description_not_available">Descrizione non disponibile</string>
    <string name="pdf_button">File PDF</string>
    <string name="pdf_not_available">PDF non disponibile</string>
    <string name="go_back_from_description">Ritorna ai dettagli</string>
    <string name="info_photos">Foto</string>
    <string name="photos_not_available">Foto non disponibili</string>
    <string name="sure_to_delete_song">Cancella nastro</string>
    <string name="delete_is_irreversible">Il nastro verrà eliminato definitivamente</string>
    <string name="edit">MODIFICA</string>
    <string name="pass_to_edit_activity">Conferma per passare al men\ù per modificare i dati dell\'opera selezionata</string>
    <string name="import_setting">IMPORTA</string>
    <string name="pass_to_import_activity">Vuoi passare al menù di importazione?</string>
    <string name="refresh_setting">AGGIORNA</string>
    <string name="pass_to_refresh_activity">Vuoi aggiornare il database controllando i file xml?</string>
    <string name="unable_to_delete">Impossibile eliminare il brano</string>
    <string name="unable_to_edit">Impossibile modificare il brano</string>
    <string name="empty_folder1">Il percorso </string>
    <string name="empty_folder2"> non contiene cartelle valide</string>
    <string name="exit_without_saving">Uscire senza salvare?</string>
    <string name="monitor_setup_option">Ricarica lista</string>
    <string name="monitor_setup_label">Setup dell\'ascolto</string>
    <string name="left_channel">CANALE SINISTRO</string>
    <string name="right_channel">CANALE DESTRO</string>
    <string name="tracks_tipology">Tipo di nastro:</string>
    <string name="tracks_number">Numero di tracce:</string>
    <string name="inversion">Inverti i canali</string>
    <string name="xml_correctly_written">Scrittura avvenuta correttamente</string>
    <string name="title_activity_settings">Impostazioni</string>
    <string name="first_header_activity_settings">Impostazioni di visualizzazioni</string>
    <string name="checkbox1_title_activity_settings">TextView</string>
    <string name="checkbox1_subtitle_activity_settings">Mostra o nascondi la textview</string>
    <string name="checkbox2_title_activity_settings">Barra di stato</string>
    <string name="advanced_options_activity_settings">Attiva o disattiva le opzioni avanzate</string>
    <string name="second_header_activity_settings">Impostazioni avanzate</string>
    <string name="checkbox2_subtitle_activity_settings">Mostra o nascondi la barra di stato di un brano</string>
    <string name="checkbox3_title_activity_settings">Importa nastri</string>
    <string name="checkbox3_subtitle_activity_settings">Permette di importare brani</string>
    <string name="checkbox4_title_activity_settings">Elimina nastri</string>
    <string name="checkbox4_subtitle_activity_settings">Permette di eliminare brani</string>
    <string name="checkbox5_title_activity_settings">Modifica nastri</string>
    <string name="checkbox5_subtitle_activity_settings">Permette di modificare i dati di una singola canzone</string>
    <string name="text1_title_activity_settings">Percorso</string>
    <string name="text1_subtitle_activity_settings">Percorso dove sono salvati gli Xml</string>
    <string name="path_ok_activity_settings">OK</string>
    <string name="export_in_xml">Esporta il database in XML</string>
    <string name="where_we_export0">Dove</string>
    <string name="where_we_export">Percorso dove verrà esportato il database</string>
    <string name="language_header_settings">SCELTA DELLA LINGUA</string>
    <string name="choose_a_language">LINGUA</string>
    <string name="choose_a_language_summary">Seleziona la lingua per l\'applicazione</string>
    <string name="password">Password</string>
    <string name="password_needed">Inserire password, prego</string>
    <string name="insert_password">Inserire password attuale, prego</string>
    <string name="insert_new_password">Inserire la nuova password</string>
    <string name="password_success">Password cambiata</string>
    <string name="wrong_password">Password errata, riprovare</string>
    <string name="external_error">Impossibile leggere l\'external storage</string>
    <string name="external_permission_error">Errore. Controllare i permessi e la cartella scelta</string>
    <string name="directory_changed">Cartella cambiata con successo</string>
    <string name="change_password_title">Modifica password</string>
    <string name="lets_change_the_path">Cambia percorso</string>
    <string name="lets_begin_the_import">Procedere all\'esportazione</string>
    <string name="revert_from_exporting">Annulla</string>
    <string name="ok">OK</string>
    <string name="cancel">Annulla</string>
    <string name="maintenance">Manutenzione tracce</string>
    <string name="what_is_maintenance">Abilità opzioni di importazione, modifica e cancellazione brani</string>
    <string name="title_activity_single_song_settings">Impostazioni Brano</string>
    <string name="title_alert_activity_single_song_settings">ATTENZIONE!</string>
    <string name="first_header_activity_single_song_settings">Impostazioni generali</string>
    <string name="song_name_activity_single_song_settings">Modifica il nome del brano</string>
    <string name="song_name_title_activity_single_song_settings">Nome Brano</string>
    <string name="song_author_activity_single_song_settings">Modifica il nome dell\'autore</string>
    <string name="song_author_title_activity_single_song_settings">Autore</string>
    <string name="song_year_activity_single_song_settings">Modifica l\'anno di composizione</string>
    <string name="song_year_title_activity_single_song_settings">Anno di composizione</string>
    <string name="second_header_activity_single_song_settings">Impostazioni di riproduzione</string>
    <string name="song_eq_activity_single_song_settings">Scegli l\'equalizzazione più adatta al brano</string>
    <string name="song_speed_activity_single_song_settings">Scegli la velocità di riproduzione più adatta al brano</string>
    <string name="import_first_step">Campi obbligatori</string>
    <string name="import_second_step">Impostazioni di riproduzione</string>
    <string name="import_third_step">Informazioni generali</string>
    <string name="track_choice">Scelta delle tracce</string>
    <string name="import_description_step">Descrizione dell\'opera</string>
    <string name="import_photo_and_video_step">Scelta delle cartelle foto, video e del pdf</string>
    <string name="title_equalizzazione_importazione">Equalizzazione</string>
    <string name="title_velocita_importazione">Velocità di riproduzione</string>
    <string name="title_canale1_importazione">Nome del file</string>
    <string name="trackpath_1">Nome del primo file</string>
    <string name="trackpath_2">Nome del secondo file</string>
    <string name="trackpath_3">Nome del terzo file</string>
    <string name="trackpath_4">Nome del quarto file</string>
    <string name="categoria_4_importazione">Immagine del brano</string>
    <string name="author">Autore</string>
    <string name="newauthor">Nuovo Autore</string>
    <string name="name">Nome</string>
    <string name="newname">Nuovo Nome</string>
    <string name="search_option">Cerca brani</string>
    <string name="edit_option">Modifica info brano</string>
    <string name="discard_option">Elimina brano</string>
    <string name="refresh_option">Aggiorna i dati</string>
    <string name="import_option">Importa nuovi brani</string>
    <string name="running_song">Nessuna canzone attualmente in riproduzione </string>
    <string name="number_of_tracks_title">Numero di tracce</string>
    <string name="number_of_tracks_summary">Scelta del numero di tracce componenti il brano</string>
    <string name="signature_title">Firma</string>
    <string name="signature_summary">Modifica la Signature del brano</string>
    <string name="provenance_title">Provenienza</string>
    <string name="provenance_summary">Modifica la provenienza del brano</string>
    <string name="tape_width_title">Tape width</string>
    <string name="tape_width_summary">Modifica il valore della larghezza del nastro</string>
    <string name="extension_title">Formato</string>
    <string name="extension_summary">Change audio file format</string>
    <string name="bitdepth_title">Bit Depth</string>
    <string name="bitdepth_summary">Cambia bit depth</string>
    <string name="description_title">Descrizione</string>
    <string name="description_summary">Aggiungi delle note a corredo del brano</string>
    <string name="settings_description_summary">Aggiungi/modifica delle note a corredo del brano</string>
    <string name="photos_title">Cartella foto</string>
    <string name="photos_summary">Visualizza e modifica il path alla cartella contenente le foto del brano</string>
    <string name="photos_path_title">Percorso cartella foto</string>
    <string name="photos_path_summary">Percorso: </string>
    <string name="video_path_title">Percorso cartella video</string>
    <string name="video_path_summary">Percorso: </string>
    <string name="other_settings">Altre impostazioni</string>
    <string name="detail_description"><b>Dettaglio canzone\n</b></string>
    <string name="detail_equalization">Equalizzazione: -</string>
    <string name="detail_speed">Velocità: -</string>
    <string name="detail_signature">Firma: -</string>
    <string name="detail_provenance">Provenienzae: -</string>
    <string name="detail_duration">Lunghezza: -</string>
    <string name="detail_extension">Estensione: -</string>
    <string name="detail_bitdepth">Bit Depth: -</string>
    <string name="detail_samplerate">Sample Rate: -</string>
    <string name="detail_numberoftracks">Numero di tracce: -</string>
    <string name="detail_tapewidth">Largezza nastro: -</string>
    <string name="charge_tape">carica nastro</string>
    <string name="more_info">More info</string>
</resources>