<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="unipd.dei.magnetophone" xmlns:magnetophone="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_action_search"
        magnetophone:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        magnetophone:showAsAction="ifRoom"
        android:title="@string/search_option"/>
    <item
        android:id="@+id/ic_action_import"
        android:icon="@drawable/ic_action_new"
        magnetophone:showAsAction="ifRoom"
        android:title="@string/import_option"/>
    <item
        android:id="@+id/ic_action_edit"
        android:icon="@drawable/ic_action_edit"
        magnetophone:showAsAction="ifRoom"
        android:title="@string/edit_option"/>
    <item
        android:id="@+id/ic_action_discard"
        android:icon="@drawable/ic_action_discard"
        magnetophone:showAsAction="ifRoom"
        android:title="@string/discard_option"/>
    <item
        android:id="@+id/ic_action_refresh"
        android:icon="@drawable/ic_action_refresh"
        magnetophone:showAsAction="ifRoom"
        android:title="@string/refresh_option"/>
</menu>