<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <!-- <TextView
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:text="@string/titleoptions" 
    />-->
    
    <!-- Linear Layout per il nome del brano -->
    <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:id="@+id/linearLayout1">
    <TextView 
        android:text="@string/name" 
        android:id="@+id/textViewName" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <EditText 
        android:text="" 
        android:hint="@string/newname"
        android:id="@+id/editTextName" 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
    </EditText>
</LinearLayout>

    <!-- Linear Layout per il nome dell'autore -->
    
    <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:id="@+id/linearLayoutAuthor">
    <TextView 
        android:text="@string/author" 
        android:id="@+id/textViewAuthor" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <EditText 
        android:text="" 
        android:hint="@string/newauthor"
        android:id="@+id/editTextAuthor" 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
    </EditText>
</LinearLayout>

</LinearLayout>
